# pudding

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
AI/: 20250607_Claude_Opus_Suggestions.md
docs/: developer_guide.md
examples/text_pipeline/: README.md  components.py  demo.py
src/pudding/: __init__.py
src/pudding/core/: __init__.py  base_component.py  config.py  data_envelope.py  registry.py
tests/: test_dummy.py
